# zetabot

./: README.md
hardware/: README.md
schematic_files/: ZetaBot.kicad_pcb  ZetaBot.kicad_prl  ZetaBot.kicad_pro  ZetaBot.kicad_sch  ZetaBot.kicad_sym  fp-lib-table
schematic_files/ZetaBotFootprints.pretty/: BUCK_CONV.kicad_mod  CP_Radial_D12.5mm_P5.00mm.kicad_mod  C_Disc_D3.0mm_W2.0mm_P2.50mm.kicad_mod  D_DO-41_SOD81_P10.16mm_Horizontal.kicad_mod  Fuseholder_Cylinder-5x20mm_Schurter_0031_8201_Horizontal_Open.kicad_mod  LED_D5.0mm_Clear.kicad_mod  PinHeader_1x03_P2.54mm_Vertical.kicad_mod  PinHeader_1x05_P2.54mm_Vertical.kicad_mod  RPI5.kicad_mod  RPLIDAR C1.kicad_mod  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal.kicad_mod  TE_4-1825136-5.kicad_mod  USB_C.kicad_mod  USB_C_PD.kicad_mod
schematic_files/gerber/: ZetaBot-B_Cu.gbl  ZetaBot-Edge_Cuts.gm1  ZetaBot-F_Cu.gtl  ZetaBot-NPTH.drl  ZetaBot-PTH.drl  ZetaBot-job.gbrjob
schematic_files/gufiles/drill/: ZetaBot-NPTH.drl  ZetaBot-PTH.drl
software/: testMotor.cpp  zetabot.cpp  zetabot.h
stereo/: CMakeLists.txt  README.md  main.cpp  stereo.cpp  stereo.h  window.cpp  window.h
wheeleddrive/: CMakeLists.txt  README.md  testIO.cpp  testMotor.cpp  zetabot.h
